--- a/Views/Product/SearchForm.cshtml
+++ b/Views/Product/SearchForm.cshtml
@@ -1,33 +1,18 @@
 ﻿@model DatabaseAppMockarooData.Models.ProductModel
 
-<h4>ProductModel</h4>
+<h4>Search form</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="SearchForm">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="SearchResults">
+
             <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
+                <label class="control-label">Search for a Product Name</label>
+
+                <input name="searchTerm" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Search" class="btn btn-primary" />
             </div>
         </form>
     </div>
